# backtest

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/example/: CMakeLists.txt  TestModul.cpp  TestModul.h
src/interface/: ModuleBase.h
